:hammer: Windows 環境で、VS Code を用いてビルド・デバッグできるように設定を追加した

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,19 +9,10 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "windows": {
+                "command": "msbuild"
             }
-        },
-        {
-            "label": "Run",
-            "type": "shell",
-            "command": "make",
-            "args": [
-                "RunRelease"
-            ],
-            "dependsOn": [
-                "Build"
-            ],
-            "problemMatcher": []
         }
     ]
 }
