:hammer: Linux 上の VS Code で正常にデバッグ実行ができるようにした

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,13 +5,15 @@
             "label": "Build",
             "type": "shell",
             "command": "make",
+            "args": ["Debug"],
             "problemMatcher": [],
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
             "windows": {
-                "command": "msbuild"
+                "command": "msbuild",
+                "args": []
             }
         }
     ]
